<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/import_nav"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/import_btn"
        android:visible="false" />
    <item
        android:id="@+id/model_nav"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:title="@string/modelosText" />
    />
    android:title="@string/import_btn" />
    <item
        android:id="@+id/material_nav"
        android:icon="@drawable/ic_leather_black"
        android:title="@string/materialsTxt" />
    <item
        android:id="@+id/cutNotes_nav"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/cutNotes" />
    <item
        android:id="@+id/accessories_nav"
        android:icon="@drawable/ic_label_black_24dp"
        android:title="@string/action_complements" />
    <item
        android:id="@+id/externalworks_nav"
        android:icon="@drawable/ic_all_out_black_24dp"
        android:title="@string/externalActivity" />
    <item
        android:icon="@drawable/ic_contact_phone_black_24dp"
        android:id="@+id/dealership_nav"
        android:title="@string/action_sortDealer" /><![CDATA[

    />
    ]]>
    <item
        android:id="@+id/database_nav"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="Exportar Base de Datos" />
    />
    <item
        android:id="@+id/deleteDatabase_nav"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="Eliminar Base de Datos" />
    />
    <item
        android:id="@+id/option_nav"
        android:icon="@drawable/ic_settings_cell_black_24dp"
        android:title="@string/action_setting"
        android:visible="false" />
    />
</menu>