<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
         android:id="@+id/group_options">
        <item
            android:id="@+id/action_category"
            android:enabled="true"
            android:icon="@drawable/ic_folder_open_white_24dp"
            android:orderInCategory="100"
            android:title="@string/action_category"

            android:visible="false"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_filter"
            android:enabled="true"
            android:icon="@drawable/ic_person_white_24dp"
            android:orderInCategory="100"
            android:title="@string/action_filter"
            android:visible="true"
            app:showAsAction="ifRoom">

        </item>

        <item
            android:id="@+id/action_sort"
            android:enabled="true"
            android:icon="@drawable/ic_sort_white_24dp"
            android:orderInCategory="200"
            android:title="@string/action_sort"
            android:visible="true"
            app:showAsAction="ifRoom">

            <menu>
                <group
                    android:id="@+id/materialSortType"
                    android:checkableBehavior="single"
                    android:menuCategory="container">
                    <item
                        android:id="@+id/action_sortName"
                        android:checked="false"
                        android:title="@string/action_sortAlphabetical" />
                    <item
                        android:id="@+id/action_sortType"
                        android:checked="true"
                        android:title="@string/action_sortType" />
                    <item
                        android:id="@+id/action_sortDate"
                        android:title="@string/action_sortDate" />
                    <item
                        android:id="@+id/action_sortDealer"
                        android:checked="false"
                        android:title="@string/action_sortDealer" />
                    <item
                        android:id="@+id/action_sortSeasons"
                        android:checked="false"
                        android:title="@string/action_sortSeasons" />

                </group>
            </menu>

        </item>


        <item
            android:id="@+id/action_searchBar"
            android:enabled="true"
            android:icon="@drawable/ic_search_white_24dp"
            android:orderInCategory="300"
            android:title="@string/action_search"
            android:visible="true"
            app:searchIcon="@drawable/ic_search_white_24dp"
            app:showAsAction="never" />



        <item

            android:id="@+id/action_viewBar"
            android:icon="@drawable/ic_list_white_24dp"
            android:orderInCategory="400"
            android:title="@string/action_viewMode"
            android:visible="true"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_search"
        android:visible="false">



    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_more_vert_white_24dp"
            android:title="@string/action_searchParameter"
            app:showAsAction="never|always">
            <menu>
                <group
                    android:id="@+id/searchType"
                    android:checkableBehavior="single"
                    android:menuCategory="container">
                    <item
                        android:id="@+id/action_searchName"
                        android:checked="true"
                        android:enabled="true"

                        android:orderInCategory="100"
                        android:title="@string/material_Name"
                        android:visible="true" />
                    <item
                        android:id="@+id/action_searchType"
                        android:enabled="true"
                        android:orderInCategory="200"

                        android:title="@string/material_type"
                        android:visible="true" />
                    <item
                        android:id="@+id/action_searchDealer"

                        android:enabled="true"
                        android:orderInCategory="300"
                        android:title="@string/material_dealership"
                        android:visible="true">

                    </item>

                    <item
                        android:id="@+id/action_searchSeasons"

                        android:enabled="true"
                        android:orderInCategory="400"
                        android:title="@string/material_seasons"
                        android:visible="true">

                    </item>

                </group>
            </menu>
        </item>

    </group>
</menu>