<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_selectAll"
        android:enabled="true"
        android:orderInCategory="300"
        android:title="@string/action_selectAll"
        android:icon="@drawable/ic_unselect_all_white_24dp"
        android:visible="true"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_edit"
        android:enabled="true"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:visible="true">
        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/editModel"
                android:title="@string/action_editModel" />
            <item
                android:id="@+id/editcategory"
                android:title="@string/action_changeCategory" />
        </menu>
    </item>
    <item
        android:enabled="true"
        android:id="@+id/action_removeModel"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="200"
        android:title="@string/action_delete"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="400"

        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>





</menu>