<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/action_searchParameter"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/searchType"
                android:checkableBehavior="single"
                android:menuCategory="container">
                <item
                    android:id="@+id/action_name"
                    android:orderInCategory="100"
                    android:title="@string/material_Name"
                    android:visible="true"

                    />
                <item
                    android:id="@+id/action_type"
                    android:orderInCategory="200"
                    android:title="@string/material_type"
                    android:visible="true"

                    />
                <item
                    android:id="@+id/action_Dealer"
                    android:enabled="true"

                    android:orderInCategory="300"
                    android:title="@string/material_dealership"
                    android:visible="true">

                </item>

                <item
                    android:id="@+id/action_seasons"
                    android:enabled="true"

                    android:orderInCategory="400"
                    android:title="@string/material_seasons"
                    android:visible="true">

                </item>

            </group>
        </menu>
    </item>
</menu>
