<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.colorbuzztechgmail.spf.MainActivity">


    <item

        android:id="@+id/action_viewBar"
        android:icon="@drawable/ic_list_white_24dp"
        android:orderInCategory="200"
        android:title="@string/action_viewMode"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:enabled="true"
        android:id="@+id/action_searchBar"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="300"
        android:title="@string/action_search"
        android:visible="true"
        app:searchIcon="@drawable/ic_search_white_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_selectAll"
        android:enabled="true"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:orderInCategory="400"
        android:title="@string/action_selectAll"
        android:visible="true"
        app:showAsAction="never" />




</menu>